# riboswitchinator

./: README.md  maintainernotes.md  pyproject.toml
.github/workflows/: check.yml
src/riboswitchinator/: executable.py
tests/: test_command.py  test_vienna.py
