[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "riboswitchinator"
authors = ["Reto Stamm"]
description = "Tool to generate riboswitches for specific sequences"
readme = "README.md"
version = "0.0.1"
keywords = ["riboswitch", "genetics"]
license = "GPL-3"
classifiers = [ "Programming Language :: Python :: 3", ]
homepage="https://github.com/retospect/riboswitchinator"

[tool.poetry.scripts]
swin = "riboswitchinator.executable:switchinator_main"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/riboswitchinator/__init__.py" = ["{version}"]

